Register Server Connection Add Card Server Connection

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.fifty.smartpayv2.LoginActivity">
+    tools:context="com.example.fifty.smartpayv2.Activities.LoginActivity">
 
     <FrameLayout
         android:layout_width="384dp"
