--- a/app/src/main/res/layout/activity_pay.xml
+++ b/app/src/main/res/layout/activity_pay.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.fifty.smartpayv2.PayActivity">
+    tools:context="com.example.fifty.smartpayv2.Activities.PayActivity">
 
 </android.support.constraint.ConstraintLayout>
